# file-processor

./: .gitignore  index.html  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js
.github/workflows/: release.yml
examples/: index.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: conf-default.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  processor_config.rs  tauri.rs  ui.rs  uploader.rs
src/components/: FileList.vue  IconLoading.vue  TimeoutToast.vue  Uploader.vue
