[package]
name = "file-processor"
version = "0.1.1"
description = "A file processor"
authors = ["gudaoxuri <i@sunisle.org>", "RWDai <rwdai@foxmail.com>"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tardis = { version = "0.1.0-rc.15", features = [
  "web-client",
  "fs",
  "crypto",
  "future",
] }
once_cell = "1.10"
tauri-plugin-deep-link = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"
mime-infer = "3.0.0"
log = "0.4"
reqwest = "0.12.7"
tokio-util = { version = "0.7", features = ["codec"] }
base64 = { version = "0.22" }
tauri-plugin-process = "2.0.0-rc"
